feat(web): feature/BOAT-609-appeal-withfrawal
